# fast_copy

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
config_example/: config.ini  config.json
fast_copy/: CMakeLists.txt
fast_copy/include/: config_initialize.h  configuration_manager.h  daemon.h  events.h  file_manager.h  file_manager_cv.h  helper_functions.h  ini_parser.h  json_parser.h  logger.h  mem_usage.h  progress_bar.h  threads_creator.h  threadsafe_queue.h
fast_copy/src/: fast_copy.cpp  file_manager.cpp  file_manager_cv.cpp  helper_functions.cpp  libc-start.c  logger.cpp  mem_usage.cpp  progress_bar.cpp
fast_copy/tests/: CMakeLists.txt  configuration_manager_tests.cpp  file_manager_tests.cpp  main.cpp  parser_tests.cpp  profile_tests.cpp  settings_tests.cpp
include/: cli_parser.h  configuration_manager.h  configuration_manager_mock.h  events.h  fast_copy.h  file_manager.h  helper_functions.h  logger.h  publisher.h  settings_parser.h  string_conversion.h  threads_creator.h  types.h  win_service.h
src/: cli_parser.cpp  config_initialize.cpp  configuration_manager.cpp  fast_copy.cpp  file_manager.cpp  file_manager_cv.cpp  helper_functions.cpp  ini_parser.cpp  json_parser.cpp  string_conversion.cpp  win_service.cpp
